WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37209
[Chromium] WebIDBDatabaseError::assign doesn't work correctly
https://bugs.webkit.org/show_bug.cgi?id=37209
Summary
[Chromium] WebIDBDatabaseError::assign doesn't work correctly
Jeremy Orlow
Reported
2010-04-07 08:40:21 PDT
[Chromium] WebIDBDatabaseError::assign doesn't work correctly
Attachments
Patch
(1.06 KB, patch)
2010-04-07 08:41 PDT
,
Jeremy Orlow
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2010-04-07 08:41:31 PDT
Created
attachment 52739
[details]
Patch
Jeremy Orlow
Comment 2
2010-04-07 08:53:17 PDT
Committed
r57209
: <
http://trac.webkit.org/changeset/57209
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug