2010-04-07  Jeremy Orlow  <jorlow@chromium.org>

Reviewed by Darin Fisher.

        [Chromium] WebIDBDatabaseError::assign doesn't work correctly
        https://bugs.webkit.org/show_bug.cgi?id=37209

        * src/WebIDBDatabaseError.cpp:
        (WebKit::WebIDBDatabaseError::assign):

git-svn-id: svn://svn.chromium.org/blink/trunk@57209 bbb929c8-8fbe-4397-9dbb-9b2b20218538