third_party/WebKit/WebKit/chromium/src/WebIDBDatabaseError.cpp
@@ -48,7 +48,7 @@ WebIDBDatabaseError::~WebIDBDatabaseError()
 
 void WebIDBDatabaseError::assign(const WebIDBDatabaseError& value)
 {
-    m_private = value;
+    m_private = value.m_private;
 }
 
 void WebIDBDatabaseError::assign(unsigned short code, const WebString& message)
